@@ -83,6 +83,9 @@ us a note on ns-developers mailing list.</p>
     It is now possible to know the size of the SpectrumValue underlying std::vector, as well as
     accessing read-only every element of it.
   </li>
+  <li>
+    The GetClosestSide method of the Rectangle class returns the correct closest side also for positions outside the rectangle.
+  </li>
 </ul>
 <h2>Changes to build system:</h2>
 <ul>
